changed files by pdets auto publish service, publishid[4b8fbbcb-a729-49a0-8f5b-bc8ddb6b7b5c] and do [publish].

--- a/learn-m365-pr/wwl/run-advanced-mailbox-migrations/6-prepare-source-objects-cross-tenant-migration.yml
+++ b/learn-m365-pr/wwl/run-advanced-mailbox-migrations/6-prepare-source-objects-cross-tenant-migration.yml
@@ -4,7 +4,7 @@ title: Prepare source objects for a cross-tenant migration
 metadata:
   title: Prepare source objects for a cross-tenant migration
   description: "Prepare source objects for a cross-tenant migration"
-  ms.date: 03/09/2022
+  ms.date: 05/10/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,7 +24,7 @@ quiz:
       explanation: "This answer is correct. If the target MailUser was previously licensed for or had an ExchangeGuid that doesn't match the Source ExchangeGuid, you must complete a cleanup of the cloud mail end user."
     - content: "Synchronize the correct ExchangeGuid to the target mail user"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't what Holly should do to correct this situation. Try again."
+      explanation: "This answer is incorrect. This action isn't what Holly should do to correct this situation."
     - content: "Apply a new Exchange Online license to the target MailUser"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't what Holly should do to correct this situation. Try again."
+      explanation: "This answer is incorrect. This action isn't what Holly should do to correct this situation."
