--- a/learn-m365-pr/wwl/run-advanced-mailbox-migrations/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/run-advanced-mailbox-migrations/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 05/10/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,21 +21,21 @@ quiz:
     choices:
     - content: "Store the public folders on an encrypted hard drive and physically ship the drive to Microsoft"
       isCorrect: false
-      explanation: "This answer is incorrect. This item item isn't what Holly should do to migrate Contoso's on-premises public folders to Microsoft 365 Groups. Try again."
+      explanation: "This answer is incorrect. This item item isn't what Holly should do to migrate Contoso's on-premises public folders to Microsoft 365 Groups."
     - content: "Set up an Exchange hybrid environment"
       isCorrect: true
       explanation: "This answer is correct. If your public folders are on-premises, you must have an Exchange hybrid environment set up before you can migrate the public folder data to Microsoft Groups."
     - content: "Upload the public folders to the Import service using your existing Internet connection"
       isCorrect: false
-      explanation: "This answer is incorrect. This item item isn't what Holly should do to migrate Contoso's on-premises public folders to Microsoft 365 Groups. Try again."
+      explanation: "This answer is incorrect. This item item isn't what Holly should do to migrate Contoso's on-premises public folders to Microsoft 365 Groups."
   - content: "Fabrikam recently merged with Contoso. As the Messaging administrator for Contoso, Holly Dickson must move the Fabrikam users' Exchange Online mailboxes into Contoso's Microsoft 365 tenant. How can Holly accomplish this task?"
     choices:
     - content: "Using the Microsoft Exchange Mailbox Replication Service (MRS)"
       isCorrect: false
-      explanation: "This answer is incorrect. Cross-tenant Exchange mailbox migrations can't be done using MRS. Try again."
+      explanation: "This answer is incorrect. Cross-tenant Exchange mailbox migrations can't be done using MRS."
     - content: "Through the Exchange admin center (EAC)"
       isCorrect: false
-      explanation: "This answer is incorrect. Cross-tenant Exchange mailbox migrations can't be done using the EAC. Try again."
+      explanation: "This answer is incorrect. Cross-tenant Exchange mailbox migrations can't be done using the EAC."
     - content: "Through Windows PowerShell"
       isCorrect: true
       explanation: "This answer is correct. Cross-tenant mailbox moves are done using Windows PowerShell. The feature doesn’t have a UI through the Exchange admin center (EAC) portal. Administrators can use the New-MigrationBatch cmdlet, available through the Move Mailboxes management role, to execute cross-tenant moves."
@@ -43,10 +43,10 @@ quiz:
     choices:
     - content: "Upload or copy the PST files"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't the first step in the PST migration process. Try again."
+      explanation: "This answer is incorrect. This action isn't the first step in the PST migration process."
     - content: "Download the PST import tool and key to a private Azure storage location"
       isCorrect: true
       explanation: "This answer is correct. The first step is to download the tool and access key used to upload the PST files or copy them to a hard drive. The access key is unique to your organization and provides you (or Microsoft data center personnel if you use drive shipping) with the necessary permissions to upload PST files to a private and secure Azure storage location."
     - content: "Create a PST import-mapping file"
       isCorrect: false
-      explanation: "This answer is incorrect. This action isn't the first step in the PST migration process. Try again."
+      explanation: "This answer is incorrect. This action isn't the first step in the PST migration process."
