--- a/learn-m365-pr/wwl/run-advanced-mailbox-migrations/index.yml
+++ b/learn-m365-pr/wwl/run-advanced-mailbox-migrations/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.run-advanced-mailbox-migrations
 metadata:
   title: Run advanced mailbox migrations
   description: "Run advanced mailbox migrations"
-  ms.date: 03/09/2022
+  ms.date: 05/10/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -28,6 +28,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.run-advanced-mailbox-migrations.introduction
 - learn.wwl.run-advanced-mailbox-migrations.plan-pst-migration
