--- a/learn-m365-pr/paths/manage-transport-pipeline-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/manage-transport-pipeline-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.manage-transport-pipeline-microsoft-365
 metadata:
   title: Manage the transport pipeline in Microsoft 365
   description: Manage the transport pipeline in Microsoft 365
-  ms.date: 03/09/2022
+  ms.date: 05/11/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -27,6 +27,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 modules:
 - learn.wwl.explore-transport-services
 - learn.wwl.configure-message-transport
