--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
@@ -47,7 +47,7 @@ quiz:
       explanation: "That's correct. Certain attacks work in a similar way and have similar code characteristics, which is why they're called ransomware families."
     - content: "Licensed ransomware that criminals can purchase from other cybercriminals."
       isCorrect: false
-      explanation: "That's incorrect. This is known as Ransomware-as-a-Service and allows criminals who aren't technical to also run attacks."
+      explanation: "That's incorrect. This is known as ransomware-as-a-service and allows criminals who aren't technical to also run attacks."
   - content: "If an attacker managed to gain control of the computer system of a Water Supply Company and then change the level of additives in the drinking water, what type of attack would this be?"
     choices:
     - content: "Commodity ransomware"
