--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/types-attack.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/types-attack.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.ransomware-extortion-based-threats.types-attack
-title: Types of attack
+title: Types of attacks
 metadata:
   unitType: learning-content
   title: Types of attack
