--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/index.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/index.yml
@@ -35,4 +35,4 @@ units:
 - learn-m365.ransomware-extortion-based-threats.knowledge-check
 - learn-m365.ransomware-extortion-based-threats.summary
 badge:
-  uid: learn-m365-pr.ransomware-extortion-based-security.badge
+  uid: learn-m365.ransomware-extortion-based-security.badge
