changed files by pdets auto publish service, publishid[07f5a6f2-2a6c-4455-a0d9-cc809063b3db] and do [publish].

--- a/learn-m365-pr/wwl/introduction-to-microsoft-365-threat-intelligence/7-explore-threat-analytics-microsoft-365.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-365-threat-intelligence/7-explore-threat-analytics-microsoft-365.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Explore threat analytics in Microsoft 365"
   ms.date: 05/11/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 9
