changed files by pdets auto publish service, publishid[56208954-5060-41aa-91e4-ce6bdf4f8bf9] and do [publish].

--- a/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/6-configure-cloud-discovery-microsoft-defender-cloud-apps.yml
+++ b/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/6-configure-cloud-discovery-microsoft-defender-cloud-apps.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Configure Cloud Discovery in Microsoft Defender for Cloud Apps"
   ms.date: 05/11/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
