--- a/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/5-manage-alerts-microsoft-defender-cloud-apps.yml
+++ b/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/5-manage-alerts-microsoft-defender-cloud-apps.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Manage and respond to alerts in Microsoft Defender for Cloud Apps"
   ms.date: 05/11/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
