--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/activity-engagement.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/activity-engagement.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.engaged-reports-with-viva-goals.activity-engagement
-title: Activity engagement
+title: Engage with activity in Viva Goals
 metadata:
   unitType: learning-content
-  title: Activity engagement
+  title: Engage with activity in Viva Goals
   description: Learn how to keep track of people, teams, and reports within Viva Goals
   ms.date: 05/05/2022
   author: rasanders
