--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/reports.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/reports.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.engaged-reports-with-viva-goals.reports
-title: Reports
+title: Create data reports with Viva Goals
 metadata:
   unitType: learning-content
-  title: Reports
+  title: Create data reports with Viva Goals
   description: Learn how Viva Goals allows you to manage and sort all the OKR data
   ms.date: 05/05/2022
   author: rasanders
