--- a/learn-m365-pr/m365/ensure-okr-program-success/cultivate-growth-mindset.yml
+++ b/learn-m365-pr/m365/ensure-okr-program-success/cultivate-growth-mindset.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.ensure-okr-program-success.create-psychological-safety
-title: Create psychological safety
+uid: learn-m365.ensure-okr-program-success.cultivate-growth-mindset
+title: Cultivate a growth mindset
 metadata:
   unitType: learning-content
-  title: Create psychological safety
+  title: Cultivate a growth mindset
   description: Learn about psychological safety and how it refers to an employee's sense that they can speak up about their ideas
   ms.date: 05/05/2022
   author: rasanders
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 3
 content: |
-  [!include[](includes/create-psychological-safety.md)]
+  [!include[](includes/cultivate-growth-mindset.md)]
