--- a/learn-m365-pr/wwl/introduction-to-microsoft-365-threat-intelligence/index.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-365-threat-intelligence/index.yml
@@ -11,12 +11,12 @@ metadata:
 title: Explore threat intelligence in Microsoft 365 Defender
 summary: This module examines how Microsoft 365 Threat Intelligence provides admins with evidence-based knowledge and actionable advice that can be used to make informed decisions about protecting and responding to cyber-attacks against their tenants.
 abstract: |
-  By the end of this module, you will be able to:
-  - Describe how threat intelligence in Microsoft 365 is powered by the Microsoft Intelligent Security Graph.
-  - Create alerts that can identify malicious or suspicious events.
-  - Understand how the Microsoft 365 Defender's Automated investigation and response process works.
-  - Describe how threat hunting enables security operators to identify cybersecurity threats.
-  - Describe how Advanced hunting in Microsoft 365 Defender proactively inspects events in your network to locate threat indicators and entities.
+  By the end of this module, you'll be able to:
+  *   Describe how threat intelligence in Microsoft 365 is powered by the Microsoft Intelligent Security Graph.
+  *   Create alerts that can identify malicious or suspicious events.
+  *   Understand how the Microsoft 365 Defender's Automated investigation and response process works.
+  *   Describe how threat hunting enables security operators to identify cybersecurity threats.
+  *   Describe how Advanced hunting in Microsoft 365 Defender proactively inspects events in your network to locate threat indicators and entities.
 prerequisites: |
   None
 iconUrl: /learn/achievements/explore-m365-threat-intelligence.svg
@@ -30,13 +30,6 @@ roles:
 products:
 - m365
 - office-365
-subjects:
-- cloud-security
-- identity-access
-- information-protection-governance
-- insider-risk
-- security
-- threat-protection
 units:
 - learn.wwl.introduction-to-microsoft-365-threat-intelligence.introduction
 - learn.wwl.introduction-to-microsoft-365-threat-intelligence.explore-microsoft-intelligent-security-graph
