changed files by pdets auto publish service, publishid[4c9ee9d9-1db8-4c12-8ab7-6d86099f1419] and do [publish].

--- a/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/4-configure-file-policies-microsoft-defender-cloud-apps.yml
+++ b/learn-m365-pr/wwl/implement-microsoft-defender-for-cloud-apps/4-configure-file-policies-microsoft-defender-cloud-apps.yml
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Anomaly detection policy"
       isCorrect: false
-      explanation: "That's incorrect. Anomaly detection policies enable you to look for unusual activities on your cloud based on the risk factors you set to alert you when something happens that is different from either the baseline of your organization or from the user's regular activity. Try again."
+      explanation: "Incorrect. Anomaly detection policies enable you to look for unusual activities on your cloud based on the risk factors you set to alert you when something happens that is different from either the baseline of your organization or from the user's regular activity."
     - content: "App discovery policy"
       isCorrect: false
-      explanation: "That's incorrect. App discovery policies enable you to set alerts that notify you when new apps are detected within your organization. Try again."
+      explanation: "Incorrect. App discovery policies enable you to set alerts that notify you when new apps are detected within your organization."
     - content: "Cloud Discovery anomaly detection policy"
       isCorrect: true
-      explanation: "That's correct. Cloud Discovery anomaly detection policies look at the logs you use for discovering cloud apps and search for unusual occurrences, such as when the number of transactions on a particular app are higher than usual."
+      explanation: "Correct. Cloud Discovery anomaly detection policies look at the logs you use for discovering cloud apps and search for unusual occurrences, such as when the number of transactions on a particular app are higher than usual."
