changed files by pdets auto publish service, publishid[6518b183-0fa3-4e31-8b79-26d391ec4407] and do [publish].

--- a/learn-m365-pr/wwl/implement-email-collaboration-protection/2-explore-microsoft-defender-office-365-protection-stack.yml
+++ b/learn-m365-pr/wwl/implement-email-collaboration-protection/2-explore-microsoft-defender-office-365-protection-stack.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Explore the Microsoft Defender for Office 365 protection stack"
   ms.date: 05/11/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
