--- a/learn-m365-pr/wwl/implement-email-collaboration-protection/index.yml
+++ b/learn-m365-pr/wwl/implement-email-collaboration-protection/index.yml
@@ -28,6 +28,14 @@ roles:
 products:
 - m365
 - office-365
+subjects:
+- cloud-computing
+- cloud-security
+- collaboration
+- communication
+- information-protection-governance
+- security
+- threat-protection
 units:
 - learn.wwl.implement-email-collaboration-protection.introduction
 - learn.wwl.implement-email-collaboration-protection.explore-microsoft-defender-office-365-protection-stack
