--- a/learn-m365-pr/m365/ensure-okr-program-success/index.yml
+++ b/learn-m365-pr/m365/ensure-okr-program-success/index.yml
@@ -13,8 +13,8 @@ title: Ensure OKR program success
 summary: Learn how to set your OKR program up for success by creating psychological safety, establishing business rhythms, and making the OKR change visible to your team.   <br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
-  - Define psychological safety and identify two ways to cultivate it on your team. 
-  - Identify the three cycles of the business rhythm and know how to execute them. 
+  - Define the growth mindset, psychological safety, and how to cultivate this kind of environment on your team as you roll out OKRs. 
+  - Identify the three cycles of the OKR business rhythm and know how to execute them. 
   - Identify three ways to make OKRs visible in your daily work patterns.
 prerequisites: |
   - Basic understanding of the Viva Goals environment
