fixed broken art, added new learning objective, swapped in correct video

--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/index.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/index.yml
@@ -15,6 +15,7 @@ abstract: |
   By the end of this module, you'll be able to:
     - Engage with activity within Viva Goals
     - Find OKRs that meet a certain set of criteria
+    - Understand and report on OKR data in Viva Goals
 prerequisites: |
   - Basic understanding of the Viva Goals environment
   - Access to an instance of Viva Goals
