updated LP title

--- a/learn-m365-pr/paths/okr-leadership/index.yml
+++ b/learn-m365-pr/paths/okr-leadership/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn-m365-pr.okr-leadership
 metadata:
-  title: OKR leadership program
+  title: OKR Leadership Program - Become an OKR Champion with Viva Goals
   description: The OKR Leadership Program is an intensive training intended for OKR Champions to become familiar with the elements of the OKR framework including writing, software, and program success.
   ms.date: 05/09/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: OKR Leadership Program
+title: OKR Leadership Program - Become an OKR Champion with Viva Goals
 summary: The OKR Leadership Program is an intensive training intended for OKR Champions to become familiar with the elements of the OKR framework including writing, software, and program success.
 prerequisites: |
   - None
