goals create and track review comments

--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-track-okr-progress.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-track-okr-progress.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.how-to-track-okr-progress
-title: How to track OKR progress
+title: Check-in - How to track OKR progress
 metadata:
   unitType: learning-content
-  title: How to track OKR progress
+  title: Check-in - How to track OKR progress
   description: Learn how to update the progress of OKR's
   ms.date: 04/28/2022
   author: rasanders
