--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-okrs-align-within-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-okrs-align-within-viva-goals.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.how-okrs-align-within-viva-goals
-title: How OKRs align within Viva Goals
+title: Cascade - How OKRs align within Viva Goals
 metadata:
   unitType: learning-content
-  title: How OKRs align within Viva Goals
+  title: Cascade - How OKRs align within Viva Goals
   description: Learn how OKRs show objectives, key results, and projects and can cascade from one level to another.
   ms.date: 04/28/2022
   author: rasanders
