--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-enter-okrs.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-enter-okrs.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.how-to-enter-okrs
-title: How to enter OKRs
+title: Create - How to enter OKRs
 metadata:
   unitType: learning-content
-  title: How to enter OKRs
+  title: Create - How to enter OKRs
   description: Learn how to enter OKR's into Viva Goals.
   ms.date: 04/28/2022
   author: rasanders
