--- a/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
@@ -10,12 +10,12 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Learn OKR essentials with Viva Goals
-summary: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.<br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.<br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Define the key components of an OKR and articulate how they fit together in the OKR framework.
     - Identify the five OKR Superpowers and how to leverage them.
-    - Explain the Emotional Cycle of Change and identify where you are in the process.
+    - Explain best practices for getting started with OKRs and Viva Goals, including key phases of change management.
 prerequisites: |
   None
 iconUrl: /learn/achievements/generic-badge.svg
@@ -30,7 +30,7 @@ units:
 - learn-m365.viva-goals-okr-essentials.introduction
 - learn-m365.viva-goals-okr-essentials.what-are-okrs
 - learn-m365.viva-goals-okr-essentials.why-okrs
-- learn-m365.viva-goals-okr-essentials.what-to-expect
+- learn-m365.viva-goals-okr-essentials.okr-best-practices
 - learn-m365.viva-goals-okr-essentials.knowledge-check
 - learn-m365.viva-goals-okr-essentials.summary
 badge:
