--- a/learn-m365-pr/m365/viva-goals-okr-essentials/okr-best-practices.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/okr-best-practices.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-goals-okr-essentials.what-to-expect
-title: What to expect
+uid: learn-m365.viva-goals-okr-essentials.okr-best-practices
+title: Best practices for getting started with OKRs and Viva Goals
 metadata:
   unitType: learning-content
-  title: What to expect
+  title: Best practices for getting started with OKRs and Viva Goals
   description: Learn what to expect when you use OKRs.
   ms.date: 04/28/2022
   author: rasanders
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 5
 content: |
-  [!include[](includes/what-to-expect.md)]
+  [!include[](includes/okr-best-practices.md)]
