fixed build issues

--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-track-okr-progress.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-track-okr-progress.yml
@@ -4,7 +4,7 @@ title: Check-in - How to track OKR progress
 metadata:
   unitType: learning-content
   title: Check-in - How to track OKR progress
-  description: Learn how to update the progress of OKR's
+  description: Learn how to update the progress of OKRs
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
