--- a/learn-m365-pr/wwl/introduction-to-microsoft-365-threat-intelligence/index.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-365-threat-intelligence/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.introduction-to-microsoft-365-threat-intelligence
 metadata:
   title: Explore threat intelligence in Microsoft 365 Defender
   description: "Explore threat intelligence in Microsoft 365 Defender"
-  ms.date: 05/11/2022
+  ms.date: 05/12/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -31,6 +31,11 @@ products:
 - m365
 - office-365
 subjects:
+- cloud-security
+- identity-access
+- information-protection-governance
+- insider-risk
+- security
 - threat-protection
 units:
 - learn.wwl.introduction-to-microsoft-365-threat-intelligence.introduction
