--- a/learn-m365-pr/wwl/implement-email-collaboration-protection/index.yml
+++ b/learn-m365-pr/wwl/implement-email-collaboration-protection/index.yml
@@ -16,7 +16,8 @@ abstract: |
   - Understand how Threat Explorer can be used to investigate threats and help to protect your tenant.
   - Describe the Threat Tracker widgets and views that provide you with intelligence on different cybersecurity issues that might affect your company.
   - Run realistic attack scenarios using Attack Simulator to help identify vulnerable users before a real attack impacts your organization.
-prerequisites: ""
+prerequisites: |
+  None
 iconUrl: /learn/achievements/generic-badge.svg
 levels:
 - intermediate
@@ -28,14 +29,6 @@ roles:
 products:
 - m365
 - office-365
-subjects:
-- cloud-computing
-- cloud-security
-- collaboration
-- communication
-- information-protection-governance
-- security
-- threat-protection
 units:
 - learn.wwl.implement-email-collaboration-protection.introduction
 - learn.wwl.implement-email-collaboration-protection.explore-microsoft-defender-office-365-protection-stack
