--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigate-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigate-viva-goals.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.navigate-viva-goals
-title: Navigate Viva Goals
+title: Overview - How to navigate Viva Goals
 metadata:
   unitType: learning-content
-  title: Navigate Viva Goals
+  title: Overview - How to navigate Viva Goals
   description: Learn how to navigate the Viva Goals screen
   ms.date: 04/28/2022
   author: rasanders
