consent and permissions learn freshness pass

--- a/learn-m365-pr/m365-developer/identity-permissions-consent/1-introduction.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/1-introduction.yml
@@ -3,9 +3,9 @@ uid: learn-m365.identity-permissions-consent.1-introduction
 metadata:
   title: Introduction
   description: This unit introduces you to the module and explains what you will learn.
-  ms.date: 05/26/2020
-  author: andrewconnell
-  ms.author: v-johnco
+  ms.date: 04/27/2022
+  author: omondiatieno
+  ms.author: jomondi
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Introduction
