--- a/learn-m365-pr/m365-developer/identity-permissions-consent/2-understand-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/2-understand-permissions-consent.yml
@@ -1,14 +1,42 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.identity-permissions-consent.2-understand-permissions-consent
 metadata:
-  title: Understanding permissions and the consent framework in the Microsoft identity platform
+  title: Understand the permissions and consent framework in the Microsoft identity platform
   description: In this unit, you’ll learn about the different types of permissions supported by the Microsoft identity platform and the consent experience that users and admins must go through to grant permission requests to apps.
-  ms.date: 09/07/2020
-  author: andrewconnell
-  ms.author: v-johnco
+  ms.date: 04/27/2022
+  author: omondiatieno
+  ms.author: jomondi
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Understanding permissions and the consent framework in the Microsoft identity platform
+title: Understand the permissions and consent framework in the Microsoft identity platform
 durationInMinutes: 10
 content: |
   [!include[](includes/2-understand-permissions-consent.md)]
+quiz:
+  title: Test your knowledge
+  questions:
+  - content: "Which of the following statements is correct about consent?"
+    choices:
+    - content: "Only users can consent for an app to act on their behalf; no one can grant consent for another user."
+      isCorrect: false
+      explanation: "Administrators have the ability, via admin consent, to consent on behalf of all users in the organization."
+    - content: "Users can grant consent to an app that requests it as long as the user has the permission."
+      isCorrect: true
+      explanation: "Correct!"
+    - content: "Users can grant consent to an app that requests it regardless if the user has or doesn't have the permission."
+      isCorrect: false
+      explanation: "Users can't grant consent to an app if they don't already have that permission."
+  - content: "Which of the following options isn't a good practice to adopt when it comes to permissions."
+    choices:
+    - content: "Only ask for the permissions required for implemented app functionality."
+      isCorrect: false
+      explanation: "This is a good practice that should be adopted."
+    - content: "When requesting permissions for app functionality, you should request the least-privileged access."
+      isCorrect: false
+      explanation: "This is a good practice that should be adopted."
+    - content: "When registering apps with Azure AD, it's a good idea to always use the admin consent option so users aren't bothered with permission consent requests."
+      isCorrect: true
+      explanation: "This isn't a good practice."
+    - content: "Apps should gracefully handle scenarios where the user doesn't grant consent to the app when permissions are requested."
+      isCorrect: false
+      explanation: "This is a good practice that should be adopted."
