--- a/learn-m365-pr/m365-developer/identity-permissions-consent/4-delegated-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/4-delegated-permissions-consent.yml
@@ -3,9 +3,9 @@ uid: learn-m365.identity-permissions-consent.4-delegated-permissions-consent
 metadata:
   title: Delegated permissions and consent
   description: In this unit, you’ll learn how to request delegated permissions and enable users to grant them to applications with either static or dynamic consent.
-  ms.date: 09/07/2020
-  author: andrewconnell
-  ms.author: v-johnco
+  ms.date: 04/27/2022
+  author: omondiatieno
+  ms.author: jomondi
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Delegated permissions and consent
