--- a/learn-m365-pr/m365-developer/identity-permissions-consent/5-exercise-delegated-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/5-exercise-delegated-permissions-consent.yml
@@ -3,9 +3,9 @@ uid: learn-m365.identity-permissions-consent.5-exercise-delegated-permissions-co
 metadata:
   title: Exercise - Delegated permissions and consent
   description: In this unit, you’ll learn how to request delegated permissions and enable users to grant them to applications with either static or dynamic consent.
-  ms.date: 06/17/2021
-  author: andrewconnell
-  ms.author: v-johnco
+  ms.date: 04/27/2022
+  author: omondiatieno
+  ms.author: jomondi
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Exercise - Delegated permissions and consent
@@ -17,7 +17,7 @@ quiz:
   questions:
   - content: "What is the difference between static and dynamic consent?"
     choices:
-    - content: "Static consent is when the permissions are defined ahead of time in the app registration, while dynamic consent defines the permissions as they are needed by the app."
+    - content: "Static consent is when the permissions are defined ahead of time in the app registration, while dynamic consent defines the permissions as they're needed by the app."
       isCorrect: true
       explanation: "Correct!"
     - content: "Dynamic consent is when the permissions can change over time with an app, while static consent permissions never change."
