--- a/learn-m365-pr/m365-developer/identity-permissions-consent/7-exercise-application-permissions-consent.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/7-exercise-application-permissions-consent.yml
@@ -3,9 +3,9 @@ uid: learn-m365.identity-permissions-consent.7-exercise-application-permissions-
 metadata:
   title: Exercise - Application permissions and consent
   description: In this unit, you’ll learn about application permissions, how to define them and how to grant them using a different type of consent flow in your apps.
-  ms.date: 06/17/2021
-  author: andrewconnell
-  ms.author: v-johnco
+  ms.date: 04/27/2022
+  author: omondiatieno
+  ms.author: jomondi
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Exercise - Application permissions and consent
