--- a/learn-m365-pr/m365-developer/identity-permissions-consent/8-summary.yml
+++ b/learn-m365-pr/m365-developer/identity-permissions-consent/8-summary.yml
@@ -3,9 +3,9 @@ uid: learn-m365.identity-permissions-consent.8-summary
 metadata:
   title: Summary
   description: This unit summarizes what you learned in this module.
-  ms.date: 03/10/2020
-  author: andrewconnell
-  ms.author: v-johnco
+  ms.date: 04/27/2022
+  author: omondiatieno
+  ms.author: jomondi
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Summary
