--- a/learn-m365-pr/wwl/search-for-content-security-compliance-center/index.yml
+++ b/learn-m365-pr/wwl/search-for-content-security-compliance-center/index.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Module
 uid: learn.wwl.search-for-content-security-compliance-center
 metadata:
-  title: Search for content in the Microsoft Purview compliance center
-  description: "Search for content in the Microsoft Purview compliance center"
+  title: Search for content in the Microsoft Purview compliance portal
+  description: "Search for content in the Microsoft Purview compliance portal"
   ms.date: 06/18/2021
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Search for content in the Microsoft Purview compliance center
-summary: This module examines how to search for content in the Microsoft Purview compliance center using Content Search functionality, manage the search results, and search for items from a third-party data source.
+title: Search for content in the Microsoft Purview compliance portal
+summary: This module examines how to search for content in the Microsoft Purview compliance portal using Content Search functionality, manage the search results, and search for items from a third-party data source.
 abstract: |
   By the end of this module, you will be able to:
-  - Describe how to use content search in the Microsoft Purview compliance center
+  - Describe how to use content search in the Microsoft Purview compliance portal
   - Design, create, and clone a content search
   - Preview the search results
   - View the search statistics
